<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_create_post"
        android:orderInCategory="100"
        android:title="@string/create_post"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete_post"
        android:orderInCategory="100"
        android:title="@string/delete_post"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort_feed"
        android:orderInCategory="100"
        android:title="@string/sort_feed"
        app:showAsAction="never" />

    <item
        android:id="@+id/include_deleted_feed"
        android:orderInCategory="500"
        android:title="@string/include_deleted"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_permission"
        android:orderInCategory="600"
        android:title="@string/check_permission"
        app:showAsAction="never" />

</menu>