<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".channellist.ChannelListActivity">

    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unregister"
        android:orderInCategory="200"
        android:title="@string/unregister"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_api_key"
        android:orderInCategory="700"
        android:title="@string/change_api_key"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_url"
        android:orderInCategory="800"
        android:title="@string/change_url"
        app:showAsAction="never" />

</menu>
